cmake_minimum_required(VERSION 3.30)
project(c_language C)

set(CMAKE_C_STANDARD 11)

add_executable(c_language main.c
)
# update: W1 (2025-03-16 05:38:56)
add_executable(W1 ${CMAKE_SOURCE_DIR}/export/W1_김현민.c)
# update: W2 (2025-03-16 05:45:37)
add_executable(W2 ${CMAKE_SOURCE_DIR}/export/W2_김현민.c)
# update: W3 (2025-03-18 16:49:34)
add_executable(W3 ${CMAKE_SOURCE_DIR}/export/W3_김현민.c)
# update: W4 (2025-03-25 16:57:20)
add_executable(W4 ${CMAKE_SOURCE_DIR}/export/W4_김현민.c)
# update: W5 (2025-04-01 16:45:23)
add_executable(W5 ${CMAKE_SOURCE_DIR}/export/W5_김현민.c)
add_executable(sub1 exam/w4/sub1.c)
add_executable(sub2 exam/w4/sub2.c)
add_executable(sub3 exam/w4/sub3.c)
add_executable(sub9 exam/w4/sub9.c)
add_executable(sub8 exam/w4/sub8.c)
add_executable(sub7 exam/w4/sub7.c)
add_executable(sub6 exam/w4/sub6.c)
add_executable(sub5 exam/w4/sub5.c)
add_executable(sub4 exam/w4/sub4.c)
# update: W6 (2025-04-08 16:35:59)
add_executable(W6 ${CMAKE_SOURCE_DIR}/export/W6_김현민.c)
